--- a/templates/student/submitA.html
+++ b/templates/student/submitA.html
@@ -35,8 +35,10 @@ $(function () {
         {% endif %}
         {% if not work_dict|hash_score:index > 0 %}      
             <tr><td>作品檔案</td><td><input id="id_file" name="file" type="file" class="form-control"></td></tr>
-            <tr><td valign="top">心得感想</td><td><textarea cols="20" id="id_memo{{index}}" name="memo" rows="5"  class="form-control">{{ work_dict|hash_memo:index }}</textarea></td></tr>              
-            <tr><td></td><td><input type="submit" value="送出"  class="form-control btn-info"/></td></tr>
+        <input type=hidden name=memo_e id=memo_e value={{work.memo_e}}>
+        <input type=hidden name=memo_c id=memo_c value={{work.memo_c}}> 
+ <tr><td valign="top"><div id="result">心得感想</td><td><textarea cols="20" id="id_memo{{index}}" name="memo" rows="5"  class="form-control">{{ work_dict|hash_memo:index }}</textarea></td></tr>              
+            <tr><td></td><td><input type="submit" value="送出"  class="form-control btn-info"/></div></td></tr>
         {% endif %}         
               </table>
       {% csrf_token %}   
@@ -59,6 +61,8 @@ menu:"‘false"
 };
 var attributes = {};
 swfobject.embedSWF("/static/sb2/Scratch.swf", "flashContent{{index}}", "482", "387", "10.2.0","expressInstall.swf", flashvars, params, attributes);
+
+
 </script>
               
 <div id="flashContent{{index}}" >
@@ -71,3 +75,32 @@ swfobject.embedSWF("/static/sb2/Scratch.swf", "flashContent{{index}}", "482", "3
               <BR>第{{workfiles|length|subtract:forloop.counter|add:1}}版：<A href="/student/work/download/{{typing}}/{{lesson_id}}/{{index}}/{{request.user.id}}/{{workfile.id}}">{{workfile.upload_date}}</A>
         {% endfor %}
         {% endwith %}
+{% block footer_script %}
+<script>
+function wordCount( val ){
+    var clean_message = val.replace(/\[m_\d+#\d+:\d+:\d+\]/g, '');
+    var chinese = clean_message.match(/[\u4E00-\u9FA5]/g);
+    var pure_english = clean_message.replace(/[\u4E00-\u9FA5]/g, '')
+    var wom = pure_english.match(/\w+/g);
+    return {
+      words : wom ? wom.length : 0,
+      chars : chinese ? chinese.length : 0,
+		};
+}
+
+$('#id_memo{{index}}').on('input', function(e){
+    var v = wordCount(e.target.value);
+    if (v.words + v.chars > 500) {
+      // Split the string on first 200 words and rejoin on spaces
+      $(this).val($(this).val().substring(0, 500));
+    }
+    else {
+  console.log(e.target.value);
+  $('#result').html("心得感想<BR>(英:" + v.words + " / 中: " + v.chars + ")");
+  $('input#memo_e').val(v.words);
+  $('input#memo_c').val(v.chars);
+    }
+
+});
+</script>
+{% endblock %}
