--- a/templates/student/submitF4.html
+++ b/templates/student/submitF4.html
@@ -22,7 +22,7 @@
         <input type=hidden name="index" value="{{index}}">        
         <div class="form-group">
           <label for="text-memo">心得</label>
-          <textarea name="memo" id="text-memo" rows="10" class="form-control">123{{work4.memo}}</textarea>
+          <textarea name="memo" id="text-memo" rows="10" class="form-control">{{work4.memo}}</textarea>
         </div>
         <input type="submit" value="送出" class="btn btn-info" />
       </form>
