--- a/templates/student/submitF4.html
+++ b/templates/student/submitF4.html
@@ -1,21 +1,22 @@
 {% load tag %}
 <section class="wrapper">
-  <ul class="nav nav-pills" id="myTab" role="tablist">
-    <li class="nav-item">
-      <a class="nav-link active" data-toggle="tab" href="#tab40" role="tab" aria-selected="true">上傳心得</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" id="nav-link-all" data-toggle="tab" href="#tab4a" role="tab" aria-selected="true">錯誤記錄</a>
-      </li>    
+
+        <ul class="nav nav-pills" id="myTab" role="tablist">
+            <li class="nav-item">
+                <a class="nav-link active" id="nav-link-all" data-toggle="tab" href="#tab4a" role="tab" aria-selected="true">錯誤記錄</a>
+              </li> 
     {% for work in works3 %}
     <li class="nav-item">
       <a class="nav-link" id="nav-link-{{work.id}}" data-toggle="tab" href="#tab4{{forloop.counter}}" role="tab" aria-selected="true">{{forloop.counter}}</a>
     </li>
-    {% endfor %}
+    {% endfor %}    
+    <li class="nav-item">
+        <a class="nav-link" data-toggle="tab" href="#tab40" role="tab" aria-selected="true">上傳心得</a>
+      </li>       
   </ul>
   <br/>
   <div class="tab-content" id="myTabContent">
-    <div class="tab-pane fade show active" id="tab40" role="tabpanel" aria-labelledby="tab41-tab">
+    <div class="tab-pane fade" id="tab40" role="tabpanel" aria-labelledby="tab41-tab">
       <form action="" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <input type=hidden name="types" value="41">
@@ -27,7 +28,7 @@
         <input type="submit" value="送出" class="btn btn-info" />
       </form>
     </div>
-    <div class="tab-pane fade all" id="tab4a" role="tabpanel" aria-labelledby="tab4a-tab">
+    <div class="tab-pane fade all show active" id="tab4a" role="tabpanel" aria-labelledby="tab4-tab">
         {% for debug in contents4 %}
         <div class="card card-default"> 
         <div class="card-header"><button type="button" class="btn btn-default">{{forloop.revcounter}}</button>
