--- a/templates/base.html
+++ b/templates/base.html
@@ -71,9 +71,9 @@ Licence URI: http://www.os-templates.com/template-terms
           </li>           
           <li><a href="#">Robot機器人(開放硬體)程式設計</a>
             <ul>
-              <li><a href="http://drweb.nksh.tp.edu.tw/student/lessons/M" target="_blank">避障車專題製作：使用Microbit</a></li>
-              <li><a href="https://hackmd.io/c/Bk3-yRHvQ/https%3A%2F%2Fhackmd.io%2Fs%2FSkB2COhtQ" target="_blank">南港高中校本課程：使用Microbit</a></li>
-            </ul>           
+               <li><a href="https://hackmd.io/c/Bk3-yRHvQ/https%3A%2F%2Fhackmd.io%2Fs%2FSkB2COhtQ" target="_blank">南港高中特色課程：使用Microbit</a></li>
+               <li><a href="https://hackmd.io/c/BkoDkoL-E/https%3A%2F%2Fhackmd.io%2Fs%2FHyKsksUZE" target="_blank">南港高中特色課程：使用RaspberryPi</a></li>
+              </ul>           
           </li>           
           <li><a href="/student/lessons/F">網路讀書會：好書共讀</a></li>
         </ul>
