--- a/templates/teacher/grade.html
+++ b/templates/teacher/grade.html
@@ -13,6 +13,8 @@
 <a href="/teacher/grade/0/4/1/{{classroom.id}}" role="btn" class='btn {% if typing == "0" %}btn-info active{% endif %}'>指定作業</a>
 {% elif lesson == "5" %}
 <a href="/teacher/grade/0/5/1/{{classroom.id}}" role="btn" class='btn {% if typing == "0" %}btn-info active{% endif %}'>指定作業</a>
+{% elif lesson == "7" %}
+<a href="/teacher/grade/0/7/1/{{classroom.id}}" role="btn" class='btn {% if typing == "0" %}btn-info active{% endif %}'>指定作業</a>
 {% endif %}
 <a href="/teacher/grade/1/{{classroom.lesson}}/1/{{classroom.id}}" role="btn" class='btn {% if typing == "1" %}btn-info active{% endif %}'>自訂作業</a>
 <a href="/teacher/grade/2/{{classroom.lesson}}/1/{{classroom.id}}" role="btn" class='btn {% if typing == "2" %}btn-info active{% endif %}'>檢核作業</a>
