--- a/templates/teacher/grade.html
+++ b/templates/teacher/grade.html
@@ -13,6 +13,8 @@
 <a href="/teacher/grade/0/4/1/{{classroom.id}}" role="btn" class='btn {% if typing == "0" %}btn-info active{% endif %}'>指定作業</a>
 {% elif lesson == "5" %}
 <a href="/teacher/grade/0/5/1/{{classroom.id}}" role="btn" class='btn {% if typing == "0" %}btn-info active{% endif %}'>指定作業</a>
+{% elif lesson == "6" %}
+<a href="/teacher/grade/0/6/1/{{classroom.id}}" role="btn" class='btn {% if typing == "0" %}btn-info active{% endif %}'>指定作業</a>
 {% elif lesson == "7" %}
 <a href="/teacher/grade/0/7/1/{{classroom.id}}" role="btn" class='btn {% if typing == "0" %}btn-info active{% endif %}'>指定作業</a>
 {% endif %}
