--- a/templates/teacher/memo.html
+++ b/templates/teacher/memo.html
@@ -110,7 +110,23 @@
             </tr>
         {% endfor %}
         </table>         
-          
+        {% elif lesson == "7" %}
+        <table>
+       <tr>   
+           <td>姓名</td>
+           <td>批閱心得</td>
+           <td>姓名</td>
+           <td>批閱心得</td>	
+           </tr>
+       {% for enroll in enrolls %}
+           <tr>
+           <td>{{enroll.seat}})<a href="/student/memo_user/{{enroll.student_id}}">{{enroll.student.first_name}}</a></td>	
+           <td><a href="/teacher/check/0/{{lesson}}/1/{{enroll.student_id}}/{{enroll.classroom_id}}">Pandas數據分析{% if enroll.score_memo_pandas > 0 %}({{enroll.score_memo_pandas}}){% endif%}</a></td>
+           <td>{{enroll.seat}}){{enroll.student.first_name}}</td>
+           <td><a href="/teacher/check/1/{{lesson}}/1/{{enroll.student_id}}/{{enroll.classroom_id}}">自訂作業{% if enroll.score_memo > 0 %}({{enroll.score_memo_custom}}){% endif%}</a></td>
+           </tr>
+       {% endfor %}
+       </table>             
         {% else %}
           1234
         {% endif %}
