--- a/templates/student/submitD.html
+++ b/templates/student/submitD.html
@@ -11,7 +11,7 @@ function checkvalue(a, index) {
 }
  
 </script>
-            <form action="/student/work/submit/{% if typing == 0 %}0{% else %}1{% endif %}/{% if 'A' in lesson %}1{% else %}{{lesson}}{% endif %}/{{index}}/" method="post" enctype="multipart/form-data" onsubmit="return checkvalue(this, {{index}});">      
+            <form action="/student/work/submit/{% if typing == "0" %}0{% else %}1{% endif %}/{% if 'A' in lesson %}1{% else %}{{lesson}}{% endif %}/{{index}}/" method="post" enctype="multipart/form-data" onsubmit="return checkvalue(this, {{index}});">      
               <input type="hidden" name="lesson" value={{lesson}}>             
               <table class="table">            
         {% if not work_dict|hash_memo:index %}                      
